# harness-benchmark-skill

./: .gitignore  GUIDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/auto_eda/: diff_summary.md  harness_score.md  session_meta.json  tool_calls.json  trace.md
examples/trimkv_impl/: diff_summary.md  session_meta.json  tool_calls.json  trace.md
harness/: __init__.py  cli.py  constants.py  hook_capture.py  parser.py  reporter.py  schemas.py  scorer.py
harness-mcp/: README.md  pyproject.toml
harness-mcp/skills/: harness-dashboard.md
harness-mcp/src/harness_mcp/: __init__.py  dashboard.py  server.py  store.py  tools.py
harness-mcp/src/harness_mcp/static/: app.js  index.html  style.css
harness-mcp/tests/: conftest.py  test_dashboard.py  test_store.py  test_tools.py
harness-mcp/tests/fixtures/sample_session/agent_logs/: diff_summary.md  session_meta.json  tool_calls.json  trace.md
sandbox/agent_logs/: diff_summary.md  harness_score.json  harness_score.md  session_meta.json  tool_calls.json  trace.md
skills/: harness-init.md  harness-log.md  harness-score.md
tests/: conftest.py  test_cli.py  test_hook_capture.py  test_parser.py  test_scorer.py
