[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-mcp"
version = "0.1.0"
description = "Live dashboard MCP server for agent-harness benchmark logs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "agent-harness>=0.2.0",
    "mcp>=1.0.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.27",
]

[project.scripts]
harness-mcp = "harness_mcp.server:main"
harness-dashboard = "harness_mcp.dashboard:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
